--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ fieldset {
    border: 2px solid white;
    border-radius: 10px;
    padding: 20px;
+   box-sizing: border-box;
 }
 
 legend {
@@ -120,7 +121,7 @@ textarea:focus {
 }
 
 img {
-   border: 2px solid orangered;
+   border: 3px solid white;
    max-height: 150px;
    max-width: 225px;
    object-fit: cover;
@@ -128,7 +129,55 @@ img {
    transition-duration: 0.5s;
 }
 
+img.delete {
+   border: 3px solid white;
+}
+
 img:hover {
    transform: scale(1.05);
-   border-color:white;   
+   border-color:green;   
+}
+
+img.delete:hover {
+   transform: scale(1.05);
+   border-color:red; 
+}
+
+@media only screen and (max-width:960px) {
+
+h1 {
+   font-size: 24px;
+}
+
+.wrapper {
+   justify-content: center;
+}
+
+input.add {
+   width: 100%;
+   box-sizing: border-box;
+}
+
+textarea.add {
+   width: 100%;
+   box-sizing: border-box;
+}
+
+fieldset {
+   padding: 10px;
+}
+
+button {
+   margin-bottom: 20px;
+}
+
+img {
+   border: 2px solid orangered;
+   max-height: 200px;
+   max-width: 300px;
+   object-fit: cover;
+   flex-grow: 1;
+   transition-duration: 0.5s;
+}
+
 }
