--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ button {
 }
 
 img {
-   border: 2px solid orangered;
+   border: 3px solid white;
    max-height: 200px;
    max-width: 300px;
    object-fit: cover;
